- change log is now collapsed by default - fixed a bug where referencing a not-existing concept lead to an infinite loop - changed headings at info page - no longer differentiate between added, removed, changed concepts, from now on only added and removed - the way the algorithm for tracking changes works, it is possible that notes are detected multiple times. to fix this, we use the uniq-tool

--- a/browser/web/css/style.css
+++ b/browser/web/css/style.css
@@ -426,6 +426,22 @@
 {
 	filter: opacity(100%);
 }
+.infoDivChanges
+{
+	height: 140px;
+	overflow:hidden;
+	position:relative;
+}
+.infoDivChangesExpand
+{
+	position:absolute;
+	background-color:white;
+	border:1px solid black;
+	text-align: center;
+	width:calc(100% - 20px);
+	bottom:0px;
+	cursor: pointer;
+}
 
 .discussionPostsContainerDiv
 {
